fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -13,16 +13,10 @@
 }
 body {
     margin: 0;
-    
-    display: flex;
-    flex-direction: column;
 
     background-color: var(--neutral-background);
     background-attachment: fixed;
     background-image: url("background.png");
-}
-body > * {
-    min-width: 0;
 }
 
 a:link {
@@ -41,7 +35,7 @@ pre {
     padding: 1em;
     background: #eee;
     border-left: 3px solid var(--accent);
-    overflow-x: auto;  
+    overflow-x: auto;
 }
 
 pre > code {
